# sw-mlpl

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGES.md  CLAUDE.md  COORDINATOR.md  Cargo.toml  README.md  WORKTREES.md  justfile
.agentrail/: plan.md  saga.toml
apps/mlpl-repl/: AGENTS.md  Cargo.toml  README.md  build.rs
apps/mlpl-repl/src/: ask.rs  connect.rs  connect_repl.rs  main.rs  svg_out.rs  version.rs
apps/mlpl-repl/tests/: connect_tests.rs
apps/mlpl-web/: AGENTS.md  Cargo.toml  README.md  Trunk.toml  build.rs  index.html
apps/mlpl-web/src/: components.rs  demos.rs  handlers.rs  help.rs  lessons.rs  lessons_advanced.rs  main.rs  state.rs  summary.rs  tutorial.rs
crates/mlpl-bench/: Cargo.toml  build.rs
crates/mlpl-bench/benches/: interp_vs_compiled.rs  mlx_vs_cpu.rs
crates/mlpl-bench/src/: lib.rs
crates/mlpl-cli/: AGENTS.md  Cargo.toml  MILESTONE.md  README.md
crates/mlpl-cli/src/: lib.rs  viz_cache.rs
crates/mlpl-cli/tests/: viz_cache_tests.rs
crates/mlpl-eval/: AGENTS.md  Cargo.toml  MILESTONE.md  README.md
crates/mlpl-eval/data/: tiny_shakespeare_snippet.txt
crates/mlpl-eval/src/: bpe.rs  device.rs  env.rs  error.rs  eval.rs  eval_for.rs  eval_ops.rs  experiment.rs  grad.rs  inspect.rs  lib.rs  llm_dispatch.rs  loader.rs  model.rs  model_clone.rs  model_dispatch.rs  model_embed_table.rs  model_estimate.rs  model_feasibility.rs  model_freeze.rs  model_lora.rs  model_perturb.rs  model_tape.rs  tokenizer.rs  value.rs
crates/mlpl-eval/tests/: acceptance_tests.rs  argtop_k_tests.rs  arith_eval_tests.rs  attention_demo_tests.rs  axis_reduce_tests.rs  bpe_apply_decode_tests.rs  bpe_train_tests.rs  builtin_eval_tests.rs  bytes_tokenizer_tests.rs  causal_attention_tests.rs  clone_model_tests.rs  compare_mean_tests.rs  constructor_tests.rs  cross_entropy_tests.rs  dataset_ops_tests.rs  device_block_tests.rs  device_dispatch_tests.rs  device_tensor_tests.rs  dot_product_tests.rs  e2e_pipeline_tests.rs  embed_table_tests.rs  embedding_viz_tests.rs  estimate_tests.rs  eval_tests.rs  experiment_block_tests.rs  experiment_registry_tests.rs  feasibility_tests.rs  for_loop_tests.rs  freeze_tests.rs  grad_builtin_tests.rs  grad_mlx_tests.rs  inspect_tests.rs  kmeans_demo_tests.rs  llm_call_tests.rs  load_tests.rs  logistic_regression_tests.rs  lora_finetune_tests.rs  lora_forward_tape_tests.rs  lora_mlx_demo_tests.rs  lora_tests.rs  (+29 more)
crates/mlpl-mlx/: Cargo.toml
crates/mlpl-mlx-serve/: Cargo.toml
crates/mlpl-mlx-serve/src/: handlers.rs  lib.rs  server.rs
crates/mlpl-mlx-serve/tests/: api_tests.rs
crates/mlpl-mlx/src/: common.rs  elementwise.rs  lib.rs  mlx_backend.rs
crates/mlpl-mlx/tests/: parity_tests.rs  tiny_lm_forward_tests.rs
crates/mlpl-parity-tests/: Cargo.toml
crates/mlpl-parity-tests/src/: lib.rs
crates/mlpl-parity-tests/tests/: parity_tests.rs
crates/mlpl-runtime/: AGENTS.md  Cargo.toml  MILESTONE.md  README.md
crates/mlpl-runtime/src/: builtins.rs  dataset_builtins.rs  embedding_builtins.rs  ensemble_builtins.rs  error.rs  grid_builtin.rs  lib.rs  llm_builtins.rs  math_builtins.rs  ml_builtins.rs  pca_builtin.rs  prng.rs  random_builtins.rs  tsne_affinities.rs  tsne_builtin.rs  tsne_gradient.rs  tsne_validate.rs
crates/mlpl-runtime/tests/: argmax_blobs_tests.rs  random_builtins_tests.rs  sample_top_k_tests.rs  schedule_tests.rs  softmax_onehot_tests.rs  synthetic_2d_tests.rs
crates/mlpl-serve/: Cargo.toml
crates/mlpl-serve/src/: auth.rs  handlers.rs  lib.rs  main.rs  peers.rs  server.rs  sessions.rs
crates/mlpl-serve/tests/: api_tests.rs  peer_routing_tests.rs  peers_tests.rs
crates/mlpl-wasm/: AGENTS.md  Cargo.toml  MILESTONE.md  README.md
crates/mlpl-wasm/src/: lib.rs
crates/mlpl-wasm/tests/: wasm_eval_tests.rs
demos/: analysis_demo.mlpl  attention.mlpl  basics.mlpl  circles_mlp.mlpl  computation.mlpl  decision_boundary.mlpl  embedding_viz.mlpl  feasibility.mlpl  kmeans.mlpl  llm_tool.mlpl  logistic_regression.mlpl  lora_finetune.mlpl  lora_finetune_mlx.mlpl  loss_curve.mlpl  matrix_ops.mlpl  mlx_remote.mlpl  moons_mlp.mlpl  neural_thicket.mlpl  neural_thicket_mlx.mlpl  pca.mlpl  repeat_demo.mlpl  softmax_classifier.mlpl  tiny_lm.mlpl  tiny_lm_generate.mlpl  tiny_lm_mlx.mlpl  tiny_mlp.mlpl  trace_demo.mlpl  transformer_block.mlpl
docs/: BDH-demo-plan.md  HRM-demo-plan.md  SmolLM2-demo-plan.md  TRM-demo-plan.md  TTT-demo-plan.md  agent-coordination.md  ai-agent-driven-development.txt  ai_agent_instructions.md  appendix.md  architecture.md  are-we-driven-yet.md  benchmarks.md  clarifications.txt  compiler-guide.md  compiler-implementation.md  compiling-mlpl.md  configurations.md  demos-scripts.md  emacs-org-fold.md  emacs-support.md  lang-reference.md  milestone-autograd.md  milestone-compile-to-rust.md  milestone-demos.md  milestone-ml.md  milestone-modeldsl.md  milestone-mvp.md  milestone-named-axes.md  milestone-optim.md  milestone-tiny-lm.md  milestone-viz.md  missing-demos.md  mlpl-as-library.txt  mlpl-for-neural-thickets.md  paper-driven-development.txt  plan.md  plugin-research.txt  prd.md  process.md  refactor-services.md  (+22 more)
elisp/: mlpl-bootstrap.el  mlpl-fold.el  mlpl-menu.el  mlpl-mode.el  mlpl-org.el  mlpl-repl.el  mlpl-svg.el  mlpl.el  ob-mlpl.el
pages/: index.html  mlpl-web-11076f6f5ca18940_bg.wasm  mlpl-web-15769b5f1d0d4a87_bg.wasm  mlpl-web-22a70df8ca06f400_bg.wasm  mlpl-web-286e92baf77742df_bg.wasm  mlpl-web-2b068fb11e57b86a.js  mlpl-web-2b068fb11e57b86a_bg.wasm  mlpl-web-2e32371b22a65860.js  mlpl-web-2e32371b22a65860_bg.wasm  mlpl-web-3301bea03e0d68f2_bg.wasm  mlpl-web-39e50592dbb20b53.js  mlpl-web-39e50592dbb20b53_bg.wasm  mlpl-web-3d7dc75ecea103c_bg.wasm  mlpl-web-3ff383416525963e.js  mlpl-web-3ff383416525963e_bg.wasm  mlpl-web-404eb3a1927b4985_bg.wasm  mlpl-web-40ed0efe1395894f_bg.wasm  mlpl-web-416d1bfd6d664928.js  mlpl-web-416d1bfd6d664928_bg.wasm  mlpl-web-47aaea68b1e40834_bg.wasm  mlpl-web-4afea1897b2fb6de.js  (+65 more)
services/mlpl-mlx-serve/: Cargo.toml
services/mlpl-mlx-serve/src/: handlers.rs  handles.rs  lib.rs  main.rs  wire.rs
services/mlpl-mlx-serve/tests/: wire_tests.rs
(+1164 files in other folders)
