[workspace]
resolver = "2"
members = [
  "crates/mlpl-core",
  "crates/mlpl-array",
  "crates/mlpl-rt",
  "crates/mlpl-lower-rs",
  "crates/mlpl-macro",
  "crates/mlpl",
  "crates/mlpl-bench",
  "crates/mlpl-parity-tests",
  "crates/mlpl-parser",
  "crates/mlpl-runtime",
  "crates/mlpl-eval",
  "crates/mlpl-trace",
  "crates/mlpl-viz",
  "crates/mlpl-wasm",
  "crates/mlpl-autograd",
  "crates/mlpl-ml",
  "crates/mlpl-cli",
  "apps/mlpl-repl",
  "apps/mlpl-web",
  "apps/mlpl-lab",
  "apps/mlpl-build",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.9.0"

[workspace.lints.clippy]
pedantic = "warn"
