[package]
name = "mlpl-repl"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = []
# Saga 14 step 008: pass through `mlpl-eval`'s mlx feature so
# `device("mlx") { }` blocks in scripts run via `mlpl-repl -f`
# dispatch through `mlpl-mlx`. Triple-gated inside `mlpl-mlx`.
mlx = ["mlpl-eval/mlx"]

[dependencies]
mlpl-parser = { path = "../../crates/mlpl-parser" }
mlpl-eval = { path = "../../crates/mlpl-eval" }
mlpl-trace = { path = "../../crates/mlpl-trace" }
# Saga 19 preview (`:ask <question>`): minimal HTTP client used by
# the CLI REPL to call a local Ollama server at
# `$OLLAMA_HOST` (default http://localhost:11434). Pinned to 2.x
# to stay on a stable API surface; TLS disabled because Ollama
# binds to plain HTTP on localhost by default. `serde_json` picks
# up the DOM for request/response JSON.
ureq = { version = "2", default-features = false, features = ["json"] }
serde_json = "1"

[build-dependencies]
hostname = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
