[package]
name = "mlpl-repl"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = []
# Saga 14 step 008: pass through `mlpl-eval`'s mlx feature so
# `device("mlx") { }` blocks in scripts run via `mlpl-repl -f`
# dispatch through `mlpl-mlx`. Triple-gated inside `mlpl-mlx`.
mlx = ["mlpl-eval/mlx"]

[dependencies]
mlpl-parser = { path = "../../crates/mlpl-parser" }
mlpl-eval = { path = "../../crates/mlpl-eval" }
mlpl-trace = { path = "../../crates/mlpl-trace" }
# Saga 19 step 002: `:ask` now delegates the HTTP path
# to `mlpl_runtime::call_ollama` (the same path the
# `llm_call` builtin uses), so the REPL no longer
# pulls in ureq / serde_json directly. The local
# system-prompt + workspace framing stays here in
# `ask.rs`; only the POST is shared.
mlpl-runtime = { path = "../../crates/mlpl-runtime" }

[build-dependencies]
hostname = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
