[package]
name = "mlpl-repl"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = []
# Saga 14 step 008: pass through `mlpl-eval`'s mlx feature so
# `device("mlx") { }` blocks in scripts run via `mlpl-repl -f`
# dispatch through `mlpl-mlx`. Triple-gated inside `mlpl-mlx`.
mlx = ["mlpl-eval/mlx"]

[dependencies]
mlpl-parser = { path = "../../crates/mlpl-parser" }
mlpl-eval = { path = "../../crates/mlpl-eval" }
mlpl-trace = { path = "../../crates/mlpl-trace" }
# Saga 21 step 003: viz_cache transforms SVG return
# values into `viz: <path>` for both local and
# --connect modes.
mlpl-cli = { path = "../../crates/mlpl-cli" }
# Saga 19 step 002: `:ask` now delegates the HTTP path
# to `mlpl_runtime::call_ollama` (the same path the
# `llm_call` builtin uses), so the REPL no longer
# pulls in ureq / serde_json directly. The local
# system-prompt + workspace framing stays here in
# `ask.rs`; only the POST is shared.
mlpl-runtime = { path = "../../crates/mlpl-runtime" }
# Saga 21 step 002: `--connect <url>` mode delegates
# evaluation to a remote `mlpl-serve`. Blocking
# reqwest avoids pulling tokio into the REPL crate
# (the server side already owns the async runtime).
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# Spin up `mlpl-serve` in-process for `--connect`
# integration tests on a random localhost port.
mlpl-serve = { path = "../../crates/mlpl-serve" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = "0.7"

[build-dependencies]
hostname = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
