[package]
name = "mlpl-web"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
mlpl-wasm = { path = "../../crates/mlpl-wasm" }
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "KeyboardEvent",
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
] }
gloo = "0.11"
