[package]
name = "mlpl-bench"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
mlpl-rt = { path = "../mlpl-rt" }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
mlpl-array = { path = "../mlpl-array" }
mlpl-eval = { path = "../mlpl-eval" }
mlpl-parser = { path = "../mlpl-parser" }

[build-dependencies]
mlpl-lower-rs = { path = "../mlpl-lower-rs" }
mlpl-parser = { path = "../mlpl-parser" }

[[bench]]
name = "interp_vs_compiled"
harness = false
