[package]
name = "mlpl-bench"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
# Saga 14 step 008: enable the MLX-vs-CPU Criterion harness. Pulls
# in `mlpl-eval` with its `mlx` feature so `device("mlx") { }`
# blocks in the bench source actually route through `mlpl-mlx`.
# Triple-gated at the call site on macOS + aarch64.
mlx = ["mlpl-eval/mlx"]

[dependencies]
mlpl-rt = { path = "../mlpl-rt" }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
mlpl-array = { path = "../mlpl-array" }
mlpl-eval = { path = "../mlpl-eval" }
mlpl-parser = { path = "../mlpl-parser" }

[build-dependencies]
mlpl-lower-rs = { path = "../mlpl-lower-rs" }
mlpl-parser = { path = "../mlpl-parser" }

[[bench]]
name = "interp_vs_compiled"
harness = false

[[bench]]
name = "mlx_vs_cpu"
harness = false
required-features = ["mlx"]
