[package]
name = "mlpl-eval"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
mlpl-core = { path = "../mlpl-core" }
mlpl-parser = { path = "../mlpl-parser" }
mlpl-array = { path = "../mlpl-array" }
mlpl-autograd = { path = "../mlpl-autograd" }
mlpl-runtime = { path = "../mlpl-runtime" }
mlpl-trace = { path = "../mlpl-trace" }
mlpl-viz = { path = "../mlpl-viz" }

[dev-dependencies]
mlpl-lower-rs = { path = "../mlpl-lower-rs" }
