[package]
name = "mlpl-eval"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = []
# Saga 14 step 004: dispatch ops inside `device("mlx") { }` blocks
# through the `mlpl-mlx` runtime. Off by default; the `mlpl-mlx`
# crate itself triple-gates on macOS + aarch64, so building with
# this feature on a non-Apple host still compiles and falls back
# to CPU at runtime with a one-time warning.
mlx = ["dep:mlpl-mlx", "mlpl-mlx/mlx"]

[dependencies]
mlpl-core = { path = "../mlpl-core" }
mlpl-parser = { path = "../mlpl-parser" }
mlpl-array = { path = "../mlpl-array" }
mlpl-autograd = { path = "../mlpl-autograd" }
mlpl-runtime = { path = "../mlpl-runtime" }
mlpl-trace = { path = "../mlpl-trace" }
mlpl-viz = { path = "../mlpl-viz" }
mlpl-mlx = { path = "../mlpl-mlx", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
mlpl-lower-rs = { path = "../mlpl-lower-rs" }
# Saga 19 step 001: stub Ollama HTTP responses for
# `llm_call` tests without requiring a live server.
mockito = "1"
