[package]
name = "mlpl-mlx-serve"
edition.workspace = true
license.workspace = true
version.workspace = true

# Saga R1 step 001: ship as both a binary (so users
# run `mlpl-mlx-serve --bind ... --auth ...`) and a
# library (so the test harness + a future shared
# orchestrator can spin the server up in-process).
# Mirrors `mlpl-serve`'s shape exactly.
[lib]
path = "src/lib.rs"

[[bin]]
name = "mlpl-mlx-serve"
path = "src/main.rs"

[dependencies]
# Reuse mlpl-serve's auth + sessions primitives via
# path dep + pub imports (option (a) from the saga
# plan). Step 003 may extract a shared
# `mlpl-serve-core` crate if duplication grows.
mlpl-serve = { path = "../mlpl-serve" }
mlpl-eval = { path = "../mlpl-eval" }
mlpl-parser = { path = "../mlpl-parser" }
mlpl-mlx-rt = { path = "../mlpl-mlx-rt" }
mlpl-array = { path = "../mlpl-array" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
# Saga R1 step 002: tensor wire format. bincode 1.x
# is the in-memory serialization; base64 wraps it for
# JSON transport in the eval-on-device endpoint.
bincode = "1"
base64 = "0.22"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
