[package]
name = "mlpl-wasm"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mlpl-eval = { path = "../mlpl-eval" }
mlpl-parser = { path = "../mlpl-parser" }
mlpl-trace = { path = "../mlpl-trace" }
wasm-bindgen = "0.2"
